# sqlmodel-repository

./: .gitignore  Makefile  pyproject.toml  pytest.ini
sqlmodel_repository/: __init__.py
tests/: conftest.py  repository.py  test_repository.py
