[tool.poetry]
name = "sqlmodel-repository"
version = "0.0.1"
description = ""
authors = ["Dmitrij Vinokour <dmitrij.vinokour@cojodi.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
sqlmodel = "^0.0.14"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
aiosqlite = "^0.19.0"
mysqlclient = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
